// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapsable > match snapshot 1`] = `
<DocumentFragment>
  <details
    data-testid="collapsible-details"
  >
    <summary>
      <span>
        <svg
          fill="none"
          height="15px"
          viewBox="0 0 24 24"
          width="15px"
        >
          <path
            d="M9 5H7C5.89543 5 5 5.89543 5 7V19C5 20.1046 5.89543 21 7 21H17C18.1046 21 19 20.1046 19 19V7C19 5.89543 18.1046 5 17 5H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M12 12H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M12 16H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M9 5C9 3.89543 9.89543 3 11 3H13C14.1046 3 15 3.89543 15 5V7H9V5Z"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <circle
            cx="9"
            cy="12"
            fill="#000000"
            r="1"
          />
          <circle
            cx="9"
            cy="16"
            fill="#000000"
            r="1"
          />
        </svg>
         
        <b>
          Test Tasks
        </b>
      </span>
      <span
        class="
            
            _positionText_6019c9
          "
      >
        <svg
          fill="#000"
          height="10px"
          version="1.1"
          viewBox="0 0 407 407"
          width="10px"
        >
          <polygon
            points="386.258,91.567 203.718,273.512 21.179,91.567 0,112.815 203.718,315.87 407.437,112.815 "
          />
        </svg>
         Show
      </span>
    </summary>
    <div
      class="_content_6019c9"
    >
      <div
        class="_tasksGroupWrapper_6e408e"
      >
        <div
          class="_taskWrapper_416c64"
          data-testid="task-wrapper"
        >
          <span
            class="
          
          _checkbox_416c64
        "
            data-testid="task-wrapper-checkbox"
          />
          <span>
            Test Task
          </span>
        </div>
        <div
          class="_taskWrapper_416c64"
          data-testid="task-wrapper"
        >
          <span
            class="
          
          _checkbox_416c64
        "
            data-testid="task-wrapper-checkbox"
          />
          <span>
            Test Task2
          </span>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`Collapsable > toggles the state when details is clicked twice 1`] = `
<DocumentFragment>
  <details
    data-testid="collapsible-details"
  >
    <summary>
      <span>
        <svg
          fill="none"
          height="15px"
          viewBox="0 0 24 24"
          width="15px"
        >
          <path
            d="M9 5H7C5.89543 5 5 5.89543 5 7V19C5 20.1046 5.89543 21 7 21H17C18.1046 21 19 20.1046 19 19V7C19 5.89543 18.1046 5 17 5H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M12 12H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M12 16H15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M9 5C9 3.89543 9.89543 3 11 3H13C14.1046 3 15 3.89543 15 5V7H9V5Z"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <circle
            cx="9"
            cy="12"
            fill="#000000"
            r="1"
          />
          <circle
            cx="9"
            cy="16"
            fill="#000000"
            r="1"
          />
        </svg>
         
        <b>
          Test Tasks
        </b>
      </span>
      <span
        class="
            _rotateIcon_6019c9
            _positionText_6019c9
          "
      >
        <svg
          fill="#000"
          height="10px"
          version="1.1"
          viewBox="0 0 407 407"
          width="10px"
        >
          <polygon
            points="386.258,91.567 203.718,273.512 21.179,91.567 0,112.815 203.718,315.87 407.437,112.815 "
          />
        </svg>
         Hide
      </span>
    </summary>
    <div
      class="_content_6019c9"
    >
      <div
        class="_tasksGroupWrapper_6e408e"
      >
        <div
          class="_taskWrapper_416c64"
          data-testid="task-wrapper"
        >
          <span
            class="
          
          _checkbox_416c64
        "
            data-testid="task-wrapper-checkbox"
          />
          <span>
            Test Task
          </span>
        </div>
        <div
          class="_taskWrapper_416c64"
          data-testid="task-wrapper"
        >
          <span
            class="
          
          _checkbox_416c64
        "
            data-testid="task-wrapper-checkbox"
          />
          <span>
            Test Task2
          </span>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;
